--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   provider: ^6.1.4
+  share_plus: ^10.1.4
+  flutter_staggered_grid_view: ^0.7.0
+  path_provider: ^2.1.5
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
