--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   permission_handler: ^11.4.0
   flutter_svg: ^2.0.17
   photo_view: ^0.14.0
+  video_player: ^2.8.3
+  get_thumbnail_video: ^0.7.3
+  url_launcher: ^6.2.5
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
